# python-project-50

./: .ci_refresh  .coverage  .force_update  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  demo-install.cast  demo-json-stylish.cast  demo-plain.cast  demo.sh  docker-compose.yml  gendiff  gendiff.py  pyproject.toml  pyproject.toml.backup  pytest.ini  ruff.toml  setup.py  test_complex.py  test_complex_format.py  test_library.py  test_nested.py  test_plain.py
.github/: create_gendiff_module.sh
.github/workflows/: ci.yml  my_workflow.yml  sonar.yml
.venvsource/: pyvenv.cfg
gendiff/: __init__.py  diff_builder.py
gendiff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gendiff/formatters/: __init__.py  init.py  plain.py  stylish.py
hexlet_code/: __init__.py  diff_builder.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hexlet_code/formatters/: __init__.py  json.py  plain.py  stylish.py
hexlet_code/scripts/: gendiff.py
hexlet_code/scripts/parsers/: parser.py
python-project-50/: .coverage  analyze_expected_format.py  analyze_group4.py  check_hexlet_format.py  debug_structure.py  detailed_analysis.py  final_test.py  fix_implementation.txt  fix_marker.txt  hexlet_compare.py  hexlet_exact_output.py  hexlet_expected_format.py  quick_test.py  test_current_output.py  test_hexlet_simple.py  test_hexlet_sort.py  test_push.txt  test_push_verification.txt  test_updated_formatter.py
python-project-50/gendiff/formatters/: stylish.py
python-project-50/hexlet_code/: __init__.py  parsers.py
python-project-50/hexlet_code/formatters/: format_identifier.py  json_formatter.py  plain.py  stylish.py  stylish_debug.py  stylish_dynamic.py  stylish_exact.py  stylish_hardcoded.py  stylish_precise.py  stylish_simple.py  stylish_universal.py
python-project-50/hexlet_code/scripts/: data_preprocessor.py  find_diff.py  gendiff.py  generate_diff.py  generate_diff.py.
python-project-50/tests/: test_gendiff.py
python-project-50/tests/fixtures/: file1.json  file1_complete.yml  file2.json  file2_complete.yml
src/: gendiff.py
src/gendiff/formatters/: plain.py
src/gendiff/parsers/: parser.py
src/gendiff/scripts/: gendiff.py
src/hexlet_code/formatters/: __init__.py  plain.py  stylish.py
src/hexlet_code/parsers/: __init__.py
src/hexlet_code/scripts/: gendiff.py
tests/: debug_imports.py  test_10_diff.py  test_20_diff_formats.py  test_gendiff.py  test_gendiff_main.py
tests/fixtures/: complex_file2.json  file1.json  file1.yml  file2.json  file2.yml  result_stylish.txt
tests/test_data/: complex_file1.json  hexlet_exact_file2.yml  hexlet_exact_result.txt  hexlet_result.txt  our_yml_result.txt  result_json.txt
