[project]
name = "gendiff"
version = "1.0.0"
description = "Generate differences between two files"
dependencies = [
    "pyyaml>=6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gendiff", "gendiff.scripts", "gendiff.formatters", "gendiff.scripts.parsers"]

[tool.setuptools.package-dir]
"gendiff" = "gendiff"
"gendiff.scripts" = "gendiff/scripts"
"gendiff.formatters" = "gendiff/formatters"
"gendiff.scripts.parsers" = "gendiff/scripts/parsers"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]

[tool.ruff.lint.isort]
known-first-party = ["hexlet_code"]

[tool.coverage.run]
source = ["hexlet_code"]
omit = [
    "*/tests/*",
    "*/test_*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_10_diff.py"
