[project]
name = "gendiff"
version = "1.0.0"
description = "Difference Calculator"
authors = [
    {name = "TaRgITay008", email = "your-email@example.com"},
]
dependencies = [
    "pyyaml>=6.0",
]
requires-python = ">=3.10"

[project.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff<=0.9.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W", 
    "F",
    "I",
    "B",
]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --color=yes --cov=hexlet_code --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["hexlet_code"]
omit = ["*/tests/*"]
